--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
   ],
   "require": {
     "php": "^7.3|^8.0",
-    "illuminate/database": "^8.67|^9.0|^10.0|^11.0",
-    "illuminate/support": "^8.67|^9.0|^10.0|^11.0"
+    "illuminate/database": "^8.67|^9.0|^10.0|^11.0|^12.0",
+    "illuminate/support": "^8.67|^9.0|^10.0|^11.0|^12.0"
   },
   "require-dev": {
     "orchestra/testbench": "^9.8.0",
